@@ -5,6 +5,7 @@ import org.bukkit.event.Cancellable;
 import org.bukkit.event.HandlerList;
 import org.bukkit.event.block.BlockEvent;
 import org.bukkit.inventory.ItemStack;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 
 /**
@@ -13,19 +14,21 @@ import org.jetbrains.annotations.NotNull;
  * {@link org.bukkit.block.BlastFurnace}.
  */
 public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
-    private static final HandlerList handlers = new HandlerList();
+
+    private static final HandlerList HANDLER_LIST = new HandlerList();
+
     private final ItemStack fuel;
     private int burnTime;
-    private boolean cancelled;
-    private boolean burning;
-    private boolean consumeFuel = true; // Paper
+    private boolean burning = true;
+    private boolean consumeFuel = true;
 
+    private boolean cancelled;
+
+    @ApiStatus.Internal
     public FurnaceBurnEvent(@NotNull final Block furnace, @NotNull final ItemStack fuel, final int burnTime) {
         super(furnace);
         this.fuel = fuel;
         this.burnTime = burnTime;
-        this.cancelled = false;
-        this.burning = true;
     }
 
     /**
@@ -35,7 +38,7 @@ public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
      */
     @NotNull
     public ItemStack getFuel() {
-        return fuel;
+        return this.fuel;
     }
 
     /**
@@ -44,7 +47,7 @@ public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
      * @return the burn time for this fuel
      */
     public int getBurnTime() {
-        return burnTime;
+        return this.burnTime;
     }
 
     /**
@@ -52,8 +55,8 @@ public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
      *
      * @param burnTime the burn time for this fuel
      */
-    public void setBurnTime(@org.jetbrains.annotations.Range(from = Short.MIN_VALUE, to = Short.MAX_VALUE) int burnTime) { // Paper
-        this.burnTime = Math.max(Short.MIN_VALUE, Math.min(Short.MAX_VALUE, burnTime)); // Paper
+    public void setBurnTime(@org.jetbrains.annotations.Range(from = Short.MIN_VALUE, to = Short.MAX_VALUE) int burnTime) {
+        this.burnTime = Math.clamp(burnTime, Short.MIN_VALUE, Short.MAX_VALUE);
     }
 
     /**
@@ -68,34 +71,33 @@ public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
     /**
      * Sets whether the furnace's fuel is burning or not.
      *
-     * @param burning true if the furnace's fuel is burning
+     * @param burning {@code true} if the furnace's fuel is burning
      */
     public void setBurning(boolean burning) {
         this.burning = burning;
     }
-    // Paper start
+
     /**
      * Gets whether the furnace's fuel will be consumed or not.
      *
      * @return whether the furnace's fuel will be consumed
      */
     public boolean willConsumeFuel() {
-        return consumeFuel;
+        return this.consumeFuel;
     }
 
     /**
      * Sets whether the furnace's fuel will be consumed or not.
      *
-     * @param consumeFuel true to consume the fuel
+     * @param consumeFuel {@code true} to consume the fuel
      */
     public void setConsumeFuel(boolean consumeFuel) {
         this.consumeFuel = consumeFuel;
     }
-    // Paper end
 
     @Override
     public boolean isCancelled() {
-        return cancelled;
+        return this.cancelled;
     }
 
     @Override
@@ -106,11 +108,11 @@ public class FurnaceBurnEvent extends BlockEvent implements Cancellable {
     @NotNull
     @Override
     public HandlerList getHandlers() {
-        return handlers;
+        return HANDLER_LIST;
     }
 
     @NotNull
     public static HandlerList getHandlerList() {
-        return handlers;
+        return HANDLER_LIST;
     }
 }
